--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.7.2"
   }
 }
