Disable Jekyll on GitHub Pages

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,10 @@ jobs:
       run: |
         echo "$DOMAIN" > ./public/CNAME
 
+    - name: Disable Jekyll
+      run: |
+        touch ./public/.nojekyll
+
     - name: Login to GitHub
       run: |
         git remote set-url origin "https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
