--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,4 +56,4 @@ jobs:
 
     - name: Push to gh-pages
       run: |
-        ./node_modules/.bin/gh-pages -d public -u "github-actions <41898282+github-actions@users.noreply.github.com>"
+        ./node_modules/.bin/gh-pages -d public -u "github-actions <41898282+github-actions@users.noreply.github.com>" -t
