--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "dev": "gatsby develop",
-    "start": "gatsby develop",
+    "start": "gatsby develop --host 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
