--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "sass": "^1.63.4"
   }
 }
