--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "netlify-cms": "^2.10.192",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
