--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
     "generate-background": "tsx scripts/generate-background.tsx"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "netlify-cms": "^2.10.192",
-    "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "netlify-cms": "^2.8.0",
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.6",
-    "@svgr/webpack": "^8.0.1",
-    "@types/webpack-env": "^1.18.1",
-    "eslint-config-prettier": "^8.8.0",
+    "@next/eslint-plugin-next": "^14.0.1",
+    "@svgr/webpack": "^8.1.0",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.34",
+    "@types/react-dom": "^18.2.14",
+    "@types/webpack-env": "^1.18.3",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.1",
+    "eslint-config-prettier": "^9.0.0",
     "frontmatter-markdown-loader": "^3.7.0",
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "prettier": "2.8.8",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
     "random-js": "^2.1.0",
-    "sass": "^1.63.4",
-    "tsx": "^3.12.7",
+    "sass": "^1.69.5",
+    "tsx": "^3.14.0",
+    "typescript": "^5.2.2",
     "xmlbuilder2": "^3.1.1"
   }
 }
